fix: fix the preloader overlap

--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -52,7 +52,7 @@
 
 	&__menu-button {
 		position: relative;
-		z-index: 2;
+		z-index: 1;
 		flex-direction: column;
 		justify-content: space-between;
 		margin-top: 10px;
